--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -7308,7 +7308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -7321,7 +7321,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "      <th>year</th>\n",
        "      <th>temperature</th>\n",
        "      <th>rainfall</th>\n",
@@ -7333,318 +7332,57 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"9\" valign=\"top\">A3</th>\n",
-       "      <th>17</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>85</td>\n",
-       "      <td>155</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1978</td>\n",
-       "      <td>89</td>\n",
-       "      <td>158</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1979</td>\n",
-       "      <td>86</td>\n",
-       "      <td>117</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>74</td>\n",
-       "      <td>138</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>1981</td>\n",
-       "      <td>80</td>\n",
-       "      <td>153</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>1982</td>\n",
-       "      <td>72</td>\n",
-       "      <td>229</td>\n",
-       "      <td>105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1983</td>\n",
-       "      <td>80</td>\n",
-       "      <td>145</td>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1984</td>\n",
-       "      <td>73</td>\n",
-       "      <td>203</td>\n",
-       "      <td>96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>A3</th>\n",
        "      <td>1985</td>\n",
-       "      <td>74</td>\n",
+       "      <td>89</td>\n",
        "      <td>239</td>\n",
        "      <td>110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"9\" valign=\"top\">B2</th>\n",
-       "      <th>17</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>84</td>\n",
-       "      <td>157</td>\n",
-       "      <td>175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1978</td>\n",
-       "      <td>85</td>\n",
-       "      <td>128</td>\n",
-       "      <td>154</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1979</td>\n",
-       "      <td>79</td>\n",
-       "      <td>119</td>\n",
-       "      <td>143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>71</td>\n",
-       "      <td>188</td>\n",
-       "      <td>188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>1981</td>\n",
-       "      <td>82</td>\n",
-       "      <td>121</td>\n",
-       "      <td>141</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>1982</td>\n",
-       "      <td>78</td>\n",
-       "      <td>234</td>\n",
-       "      <td>223</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1983</td>\n",
+       "      <th>B2</th>\n",
+       "      <td>1985</td>\n",
        "      <td>90</td>\n",
        "      <td>281</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1984</td>\n",
-       "      <td>76</td>\n",
-       "      <td>151</td>\n",
-       "      <td>159</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>A2</th>\n",
        "      <td>1985</td>\n",
-       "      <td>78</td>\n",
-       "      <td>152</td>\n",
-       "      <td>164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"9\" valign=\"top\">A2</th>\n",
-       "      <th>17</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>87</td>\n",
+       "      <td>88</td>\n",
        "      <td>257</td>\n",
        "      <td>225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1978</td>\n",
-       "      <td>88</td>\n",
-       "      <td>128</td>\n",
-       "      <td>133</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1979</td>\n",
-       "      <td>87</td>\n",
-       "      <td>218</td>\n",
-       "      <td>199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>81</td>\n",
-       "      <td>206</td>\n",
-       "      <td>184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>1981</td>\n",
-       "      <td>74</td>\n",
-       "      <td>175</td>\n",
-       "      <td>160</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>1982</td>\n",
-       "      <td>85</td>\n",
-       "      <td>202</td>\n",
-       "      <td>187</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1983</td>\n",
-       "      <td>71</td>\n",
-       "      <td>130</td>\n",
-       "      <td>126</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1984</td>\n",
-       "      <td>80</td>\n",
-       "      <td>225</td>\n",
-       "      <td>200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>B1</th>\n",
        "      <td>1985</td>\n",
-       "      <td>72</td>\n",
-       "      <td>196</td>\n",
-       "      <td>173</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"9\" valign=\"top\">B1</th>\n",
-       "      <th>17</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>79</td>\n",
-       "      <td>184</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1978</td>\n",
-       "      <td>74</td>\n",
-       "      <td>129</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1979</td>\n",
-       "      <td>86</td>\n",
-       "      <td>157</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>1980</td>\n",
-       "      <td>71</td>\n",
+       "      <td>89</td>\n",
        "      <td>294</td>\n",
        "      <td>110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>1981</td>\n",
-       "      <td>77</td>\n",
-       "      <td>115</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>1982</td>\n",
-       "      <td>71</td>\n",
-       "      <td>267</td>\n",
-       "      <td>106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1983</td>\n",
-       "      <td>89</td>\n",
-       "      <td>164</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1984</td>\n",
-       "      <td>75</td>\n",
-       "      <td>175</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>1985</td>\n",
-       "      <td>70</td>\n",
-       "      <td>210</td>\n",
-       "      <td>95</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             year  temperature  rainfall  mosquitos\n",
-       "location                                           \n",
-       "A3       17  1977           85       155         90\n",
-       "         18  1978           89       158         92\n",
-       "         19  1979           86       117         75\n",
-       "         20  1980           74       138         75\n",
-       "         21  1981           80       153         87\n",
-       "         22  1982           72       229        105\n",
-       "         23  1983           80       145         82\n",
-       "         24  1984           73       203         96\n",
-       "         25  1985           74       239        110\n",
-       "B2       17  1977           84       157        175\n",
-       "         18  1978           85       128        154\n",
-       "         19  1979           79       119        143\n",
-       "         20  1980           71       188        188\n",
-       "         21  1981           82       121        141\n",
-       "         22  1982           78       234        223\n",
-       "         23  1983           90       281        263\n",
-       "         24  1984           76       151        159\n",
-       "         25  1985           78       152        164\n",
-       "A2       17  1977           87       257        225\n",
-       "         18  1978           88       128        133\n",
-       "         19  1979           87       218        199\n",
-       "         20  1980           81       206        184\n",
-       "         21  1981           74       175        160\n",
-       "         22  1982           85       202        187\n",
-       "         23  1983           71       130        126\n",
-       "         24  1984           80       225        200\n",
-       "         25  1985           72       196        173\n",
-       "B1       17  1977           79       184         95\n",
-       "         18  1978           74       129         79\n",
-       "         19  1979           86       157         95\n",
-       "         20  1980           71       294        110\n",
-       "         21  1981           77       115         77\n",
-       "         22  1982           71       267        106\n",
-       "         23  1983           89       164         99\n",
-       "         24  1984           75       175         90\n",
-       "         25  1985           70       210         95"
+       "          year  temperature  rainfall  mosquitos\n",
+       "location                                        \n",
+       "A3        1985           89       239        110\n",
+       "B2        1985           90       281        263\n",
+       "A2        1985           88       257        225\n",
+       "B1        1985           89       294        110"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df['year'] < 1986) & (df['year'] > 1976)]"
+    "df[(df['year'] < 1986) & (df['year'] > 1976)].max(level='location')"
    ]
   }
  ],
