--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -7384,6 +7384,13 @@
    "source": [
     "df[(df['year'] < 1986) & (df['year'] > 1976)].max(level='location')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Challenge: obtain the minimum rainfall for each location given that the temperature was between 75F and 90"
+   ]
   }
  ],
  "metadata": {
