--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -7389,7 +7389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Challenge: obtain the minimum rainfall for each location given that the temperature was between 75F and 90"
+    "### Challenge: obtain the minimum rainfall for each location given that the temperature was between 75F and 90F"
    ]
   }
  ],
