--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -7394,546 +7394,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 113,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rainfall = df[(df['temperature'] > 75) & (df['temperature'] < 90)]['rainfall']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>rainfall</th>\n",
-       "      <th>mosquitos</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>location</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">A1</th>\n",
-       "      <th>0</th>\n",
-       "      <td>2001</td>\n",
-       "      <td>80</td>\n",
-       "      <td>157</td>\n",
-       "      <td>150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>85</td>\n",
-       "      <td>252</td>\n",
-       "      <td>217</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2003</td>\n",
-       "      <td>86</td>\n",
-       "      <td>154</td>\n",
-       "      <td>153</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2004</td>\n",
-       "      <td>87</td>\n",
-       "      <td>159</td>\n",
-       "      <td>158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>80</td>\n",
-       "      <td>214</td>\n",
-       "      <td>190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>85</td>\n",
-       "      <td>197</td>\n",
-       "      <td>181</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"24\" valign=\"top\">A3</th>\n",
-       "      <th>0</th>\n",
-       "      <td>1960</td>\n",
-       "      <td>76</td>\n",
-       "      <td>191</td>\n",
-       "      <td>93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1962</td>\n",
-       "      <td>81</td>\n",
-       "      <td>112</td>\n",
-       "      <td>73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1963</td>\n",
-       "      <td>78</td>\n",
-       "      <td>113</td>\n",
-       "      <td>72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1964</td>\n",
-       "      <td>81</td>\n",
-       "      <td>159</td>\n",
-       "      <td>89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1965</td>\n",
-       "      <td>87</td>\n",
-       "      <td>222</td>\n",
-       "      <td>109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1967</td>\n",
-       "      <td>77</td>\n",
-       "      <td>176</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1968</td>\n",
-       "      <td>89</td>\n",
-       "      <td>236</td>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1969</td>\n",
-       "      <td>88</td>\n",
-       "      <td>283</td>\n",
-       "      <td>128</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1970</td>\n",
-       "      <td>89</td>\n",
-       "      <td>151</td>\n",
-       "      <td>89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1972</td>\n",
-       "      <td>88</td>\n",
-       "      <td>267</td>\n",
-       "      <td>124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1973</td>\n",
-       "      <td>85</td>\n",
-       "      <td>211</td>\n",
-       "      <td>102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>85</td>\n",
-       "      <td>155</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1978</td>\n",
-       "      <td>89</td>\n",
-       "      <td>158</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1979</td>\n",
-       "      <td>86</td>\n",
-       "      <td>117</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>1981</td>\n",
-       "      <td>80</td>\n",
-       "      <td>153</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1983</td>\n",
-       "      <td>80</td>\n",
-       "      <td>145</td>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1987</td>\n",
-       "      <td>83</td>\n",
-       "      <td>261</td>\n",
-       "      <td>117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>1988</td>\n",
-       "      <td>89</td>\n",
-       "      <td>280</td>\n",
-       "      <td>127</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>1989</td>\n",
-       "      <td>81</td>\n",
-       "      <td>271</td>\n",
-       "      <td>121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>1990</td>\n",
-       "      <td>77</td>\n",
-       "      <td>188</td>\n",
-       "      <td>94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>1991</td>\n",
-       "      <td>80</td>\n",
-       "      <td>218</td>\n",
-       "      <td>105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>1992</td>\n",
-       "      <td>90</td>\n",
-       "      <td>257</td>\n",
-       "      <td>120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>1993</td>\n",
-       "      <td>83</td>\n",
-       "      <td>211</td>\n",
-       "      <td>105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>1994</td>\n",
-       "      <td>77</td>\n",
-       "      <td>224</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"30\" valign=\"top\">B1</th>\n",
-       "      <th>6</th>\n",
-       "      <td>1966</td>\n",
-       "      <td>77</td>\n",
-       "      <td>140</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1967</td>\n",
-       "      <td>87</td>\n",
-       "      <td>207</td>\n",
-       "      <td>106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1968</td>\n",
-       "      <td>86</td>\n",
-       "      <td>266</td>\n",
-       "      <td>115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1969</td>\n",
-       "      <td>79</td>\n",
-       "      <td>159</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1971</td>\n",
-       "      <td>79</td>\n",
-       "      <td>252</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1973</td>\n",
-       "      <td>82</td>\n",
-       "      <td>281</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>1974</td>\n",
-       "      <td>80</td>\n",
-       "      <td>295</td>\n",
-       "      <td>120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>1975</td>\n",
-       "      <td>86</td>\n",
-       "      <td>166</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>1976</td>\n",
-       "      <td>87</td>\n",
-       "      <td>298</td>\n",
-       "      <td>123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>79</td>\n",
-       "      <td>184</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1979</td>\n",
-       "      <td>86</td>\n",
-       "      <td>157</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>1981</td>\n",
-       "      <td>77</td>\n",
-       "      <td>115</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1983</td>\n",
-       "      <td>89</td>\n",
-       "      <td>164</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1987</td>\n",
-       "      <td>79</td>\n",
-       "      <td>123</td>\n",
-       "      <td>81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>1989</td>\n",
-       "      <td>84</td>\n",
-       "      <td>129</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>1990</td>\n",
-       "      <td>80</td>\n",
-       "      <td>276</td>\n",
-       "      <td>111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>1993</td>\n",
-       "      <td>78</td>\n",
-       "      <td>285</td>\n",
-       "      <td>115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>1995</td>\n",
-       "      <td>80</td>\n",
-       "      <td>180</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>1996</td>\n",
-       "      <td>90</td>\n",
-       "      <td>280</td>\n",
-       "      <td>119</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>1997</td>\n",
-       "      <td>86</td>\n",
-       "      <td>166</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>82</td>\n",
-       "      <td>285</td>\n",
-       "      <td>117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>86</td>\n",
-       "      <td>212</td>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>84</td>\n",
-       "      <td>130</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>2004</td>\n",
-       "      <td>87</td>\n",
-       "      <td>280</td>\n",
-       "      <td>121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>85</td>\n",
-       "      <td>130</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>83</td>\n",
-       "      <td>102</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>85</td>\n",
-       "      <td>163</td>\n",
-       "      <td>94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>83</td>\n",
-       "      <td>190</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>79</td>\n",
-       "      <td>151</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>88</td>\n",
-       "      <td>295</td>\n",
-       "      <td>122</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>157 rows × 4 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             year  temperature  rainfall  mosquitos\n",
-       "location                                           \n",
-       "A1       0   2001           80       157        150\n",
-       "         1   2002           85       252        217\n",
-       "         2   2003           86       154        153\n",
-       "         3   2004           87       159        158\n",
-       "         6   2007           80       214        190\n",
-       "         7   2008           85       197        181\n",
-       "A3       0   1960           76       191         93\n",
-       "         2   1962           81       112         73\n",
-       "         3   1963           78       113         72\n",
-       "         4   1964           81       159         89\n",
-       "         5   1965           87       222        109\n",
-       "         7   1967           77       176         92\n",
-       "         8   1968           89       236        114\n",
-       "         9   1969           88       283        128\n",
-       "         10  1970           89       151         89\n",
-       "         12  1972           88       267        124\n",
-       "         13  1973           85       211        102\n",
-       "         17  1977           85       155         90\n",
-       "         18  1978           89       158         92\n",
-       "         19  1979           86       117         75\n",
-       "         21  1981           80       153         87\n",
-       "         23  1983           80       145         82\n",
-       "         27  1987           83       261        117\n",
-       "         28  1988           89       280        127\n",
-       "         29  1989           81       271        121\n",
-       "         30  1990           77       188         94\n",
-       "         31  1991           80       218        105\n",
-       "         32  1992           90       257        120\n",
-       "         33  1993           83       211        105\n",
-       "         34  1994           77       224        108\n",
-       "...           ...          ...       ...        ...\n",
-       "B1       6   1966           77       140         87\n",
-       "         7   1967           87       207        106\n",
-       "         8   1968           86       266        115\n",
-       "         9   1969           79       159         92\n",
-       "         11  1971           79       252        108\n",
-       "         13  1973           82       281        116\n",
-       "         14  1974           80       295        120\n",
-       "         15  1975           86       166         99\n",
-       "         16  1976           87       298        123\n",
-       "         17  1977           79       184         95\n",
-       "         19  1979           86       157         95\n",
-       "         21  1981           77       115         77\n",
-       "         23  1983           89       164         99\n",
-       "         27  1987           79       123         81\n",
-       "         29  1989           84       129         90\n",
-       "         30  1990           80       276        111\n",
-       "         33  1993           78       285        115\n",
-       "         35  1995           80       180         95\n",
-       "         36  1996           90       280        119\n",
-       "         37  1997           86       166        100\n",
-       "         38  1998           82       285        117\n",
-       "         40  2000           86       212        101\n",
-       "         42  2002           84       130         85\n",
-       "         44  2004           87       280        121\n",
-       "         45  2005           85       130         88\n",
-       "         46  2006           83       102         77\n",
-       "         47  2007           85       163         94\n",
-       "         48  2008           83       190         99\n",
-       "         49  2009           79       151         88\n",
-       "         50  2010           88       295        122\n",
-       "\n",
-       "[157 rows x 4 columns]"
+       "location\n",
+       "A1    154\n",
+       "A3    112\n",
+       "B2    100\n",
+       "A2    111\n",
+       "B1    102\n",
+       "Name: rainfall, dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df['temperature'] > 75) &]"
+    "rainfall.min(level='location')"
    ]
   }
  ],
