--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -7462,6 +7462,562 @@
    "source": [
     "df.groupby('year')['mosquitos'].min().plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>mosquitos</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>temperature</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">1960</th>\n",
+       "      <th>count</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>136.500000</td>\n",
+       "      <td>197.500000</td>\n",
+       "      <td>82.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>37.438839</td>\n",
+       "      <td>57.726366</td>\n",
+       "      <td>4.645787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>93.000000</td>\n",
+       "      <td>129.000000</td>\n",
+       "      <td>76.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>114.750000</td>\n",
+       "      <td>175.500000</td>\n",
+       "      <td>80.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>136.500000</td>\n",
+       "      <td>195.500000</td>\n",
+       "      <td>83.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>158.250000</td>\n",
+       "      <td>217.500000</td>\n",
+       "      <td>84.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>180.000000</td>\n",
+       "      <td>270.000000</td>\n",
+       "      <td>87.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">1961</th>\n",
+       "      <th>count</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>142.000000</td>\n",
+       "      <td>226.750000</td>\n",
+       "      <td>74.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>38.807216</td>\n",
+       "      <td>67.598693</td>\n",
+       "      <td>3.162278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>109.000000</td>\n",
+       "      <td>135.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>114.250000</td>\n",
+       "      <td>204.000000</td>\n",
+       "      <td>72.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>132.500000</td>\n",
+       "      <td>238.000000</td>\n",
+       "      <td>74.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>160.250000</td>\n",
+       "      <td>260.750000</td>\n",
+       "      <td>76.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>194.000000</td>\n",
+       "      <td>296.000000</td>\n",
+       "      <td>77.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">1962</th>\n",
+       "      <th>count</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>147.750000</td>\n",
+       "      <td>204.500000</td>\n",
+       "      <td>84.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>63.725322</td>\n",
+       "      <td>71.229675</td>\n",
+       "      <td>3.862210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>112.000000</td>\n",
+       "      <td>81.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>106.000000</td>\n",
+       "      <td>173.500000</td>\n",
+       "      <td>81.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>155.500000</td>\n",
+       "      <td>212.500000</td>\n",
+       "      <td>84.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>197.250000</td>\n",
+       "      <td>243.500000</td>\n",
+       "      <td>87.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>207.000000</td>\n",
+       "      <td>281.000000</td>\n",
+       "      <td>89.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">1963</th>\n",
+       "      <th>count</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>117.500000</td>\n",
+       "      <td>143.750000</td>\n",
+       "      <td>78.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>52.500794</td>\n",
+       "      <td>35.396563</td>\n",
+       "      <td>6.377042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>113.000000</td>\n",
+       "      <td>73.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>83.250000</td>\n",
+       "      <td>113.750000</td>\n",
+       "      <td>73.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>104.000000</td>\n",
+       "      <td>140.500000</td>\n",
+       "      <td>76.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">2007</th>\n",
+       "      <th>std</th>\n",
+       "      <td>62.588338</td>\n",
+       "      <td>35.585109</td>\n",
+       "      <td>4.266146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>163.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>103.000000</td>\n",
+       "      <td>212.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>190.000000</td>\n",
+       "      <td>214.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>220.000000</td>\n",
+       "      <td>227.000000</td>\n",
+       "      <td>85.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>221.000000</td>\n",
+       "      <td>262.000000</td>\n",
+       "      <td>85.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">2008</th>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>150.800000</td>\n",
+       "      <td>195.400000</td>\n",
+       "      <td>80.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>48.576743</td>\n",
+       "      <td>7.733046</td>\n",
+       "      <td>6.465292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>186.000000</td>\n",
+       "      <td>73.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>190.000000</td>\n",
+       "      <td>74.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>176.000000</td>\n",
+       "      <td>197.000000</td>\n",
+       "      <td>83.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>181.000000</td>\n",
+       "      <td>198.000000</td>\n",
+       "      <td>85.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>206.000000</td>\n",
+       "      <td>87.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">2009</th>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>159.800000</td>\n",
+       "      <td>202.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>70.158392</td>\n",
+       "      <td>48.414874</td>\n",
+       "      <td>4.415880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>151.000000</td>\n",
+       "      <td>74.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>153.000000</td>\n",
+       "      <td>77.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>187.000000</td>\n",
+       "      <td>215.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>231.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>240.000000</td>\n",
+       "      <td>260.000000</td>\n",
+       "      <td>86.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">2010</th>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>154.400000</td>\n",
+       "      <td>214.000000</td>\n",
+       "      <td>84.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>54.957256</td>\n",
+       "      <td>61.619802</td>\n",
+       "      <td>6.107373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>127.000000</td>\n",
+       "      <td>74.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>122.000000</td>\n",
+       "      <td>199.000000</td>\n",
+       "      <td>84.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>129.000000</td>\n",
+       "      <td>207.000000</td>\n",
+       "      <td>87.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>184.000000</td>\n",
+       "      <td>242.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>236.000000</td>\n",
+       "      <td>295.000000</td>\n",
+       "      <td>89.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>408 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             mosquitos    rainfall  temperature\n",
+       "year                                           \n",
+       "1960 count    4.000000    4.000000     4.000000\n",
+       "     mean   136.500000  197.500000    82.250000\n",
+       "     std     37.438839   57.726366     4.645787\n",
+       "     min     93.000000  129.000000    76.000000\n",
+       "     25%    114.750000  175.500000    80.500000\n",
+       "     50%    136.500000  195.500000    83.000000\n",
+       "     75%    158.250000  217.500000    84.750000\n",
+       "     max    180.000000  270.000000    87.000000\n",
+       "1961 count    4.000000    4.000000     4.000000\n",
+       "     mean   142.000000  226.750000    74.000000\n",
+       "     std     38.807216   67.598693     3.162278\n",
+       "     min    109.000000  135.000000    70.000000\n",
+       "     25%    114.250000  204.000000    72.250000\n",
+       "     50%    132.500000  238.000000    74.500000\n",
+       "     75%    160.250000  260.750000    76.250000\n",
+       "     max    194.000000  296.000000    77.000000\n",
+       "1962 count    4.000000    4.000000     4.000000\n",
+       "     mean   147.750000  204.500000    84.750000\n",
+       "     std     63.725322   71.229675     3.862210\n",
+       "     min     73.000000  112.000000    81.000000\n",
+       "     25%    106.000000  173.500000    81.750000\n",
+       "     50%    155.500000  212.500000    84.500000\n",
+       "     75%    197.250000  243.500000    87.500000\n",
+       "     max    207.000000  281.000000    89.000000\n",
+       "1963 count    4.000000    4.000000     4.000000\n",
+       "     mean   117.500000  143.750000    78.000000\n",
+       "     std     52.500794   35.396563     6.377042\n",
+       "     min     72.000000  113.000000    73.000000\n",
+       "     25%     83.250000  113.750000    73.750000\n",
+       "     50%    104.000000  140.500000    76.000000\n",
+       "...                ...         ...          ...\n",
+       "2007 std     62.588338   35.585109     4.266146\n",
+       "     min     94.000000  163.000000    75.000000\n",
+       "     25%    103.000000  212.000000    79.000000\n",
+       "     50%    190.000000  214.000000    80.000000\n",
+       "     75%    220.000000  227.000000    85.000000\n",
+       "     max    221.000000  262.000000    85.000000\n",
+       "2008 count    5.000000    5.000000     5.000000\n",
+       "     mean   150.800000  195.400000    80.400000\n",
+       "     std     48.576743    7.733046     6.465292\n",
+       "     min     98.000000  186.000000    73.000000\n",
+       "     25%     99.000000  190.000000    74.000000\n",
+       "     50%    176.000000  197.000000    83.000000\n",
+       "     75%    181.000000  198.000000    85.000000\n",
+       "     max    200.000000  206.000000    87.000000\n",
+       "2009 count    5.000000    5.000000     5.000000\n",
+       "     mean   159.800000  202.000000    79.000000\n",
+       "     std     70.158392   48.414874     4.415880\n",
+       "     min     84.000000  151.000000    74.000000\n",
+       "     25%     88.000000  153.000000    77.000000\n",
+       "     50%    187.000000  215.000000    79.000000\n",
+       "     75%    200.000000  231.000000    79.000000\n",
+       "     max    240.000000  260.000000    86.000000\n",
+       "2010 count    5.000000    5.000000     5.000000\n",
+       "     mean   154.400000  214.000000    84.400000\n",
+       "     std     54.957256   61.619802     6.107373\n",
+       "     min    101.000000  127.000000    74.000000\n",
+       "     25%    122.000000  199.000000    84.000000\n",
+       "     50%    129.000000  207.000000    87.000000\n",
+       "     75%    184.000000  242.000000    88.000000\n",
+       "     max    236.000000  295.000000    89.000000\n",
+       "\n",
+       "[408 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('year').describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1960 129\n",
+      "1961 135\n",
+      "1962 112\n",
+      "1963 113\n",
+      "1964 147\n",
+      "1965 151\n",
+      "1966 103\n",
+      "1967 106\n",
+      "1968 138\n",
+      "1969 147\n",
+      "1970 151\n",
+      "1971 121\n",
+      "1972 153\n",
+      "1973 100\n",
+      "1974 101\n",
+      "1975 134\n",
+      "1976 116\n",
+      "1977 155\n",
+      "1978 128\n",
+      "1979 117\n",
+      "1980 138\n",
+      "1981 115\n",
+      "1982 202\n",
+      "1983 130\n",
+      "1984 151\n",
+      "1985 152\n",
+      "1986 214\n",
+      "1987 111\n",
+      "1988 195\n",
+      "1989 129\n",
+      "1990 159\n",
+      "1991 147\n",
+      "1992 140\n",
+      "1993 211\n",
+      "1994 126\n",
+      "1995 180\n",
+      "1996 187\n",
+      "1997 123\n",
+      "1998 127\n",
+      "1999 123\n",
+      "2000 212\n",
+      "2001 112\n",
+      "2002 130\n",
+      "2003 132\n",
+      "2004 119\n",
+      "2005 130\n",
+      "2006 102\n",
+      "2007 163\n",
+      "2008 186\n",
+      "2009 151\n",
+      "2010 127\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, group, in df.groupby('year'):\n",
+    "    print(name, group['rainfall'].min())"
+   ]
   }
  ],
  "metadata": {
