--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8018,6 +8018,13 @@
     "for name, group, in df.groupby('year'):\n",
     "    print(name, group['rainfall'].min())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Error and exceptions"
+   ]
   }
  ],
  "metadata": {
