--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8025,6 +8025,15 @@
    "source": [
     "## Error and exceptions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
