--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8116,6 +8116,56 @@
    "source": [
     "sys.path"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sys.path.append('scripts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " '/home/alter/Library/asciitree',\n",
+       " '/home/alter/Library/datreant/datreant.core/src',\n",
+       " '/home/alter/Library/datreant/datreant.data/src',\n",
+       " '/home/alter/Library/datreant/mdsynthesis/src',\n",
+       " '/home/alter/Library/nglview',\n",
+       " '/home/alter/Library/pymbar',\n",
+       " '/home/alter/Library/dask',\n",
+       " '/usr/lib/python35.zip',\n",
+       " '/usr/lib/python3.5',\n",
+       " '/usr/lib/python3.5/plat-linux',\n",
+       " '/usr/lib/python3.5/lib-dynload',\n",
+       " '/home/alter/.local/lib/python3.5/site-packages',\n",
+       " '/usr/lib/python3.5/site-packages',\n",
+       " '/usr/lib/python3.5/site-packages/gtk-2.0',\n",
+       " '/home/alter/.local/lib/python3.5/site-packages/IPython/extensions',\n",
+       " '/home/alter/.ipython',\n",
+       " 'scripts']"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.path"
+   ]
   }
  ],
  "metadata": {
