--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8221,6 +8221,15 @@
    "source": [
     "errors_02.favorite_ice_cream()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
