--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8223,13 +8223,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defensive programming: being skeptical of your code"
+   ]
   }
  ],
  "metadata": {
