--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8228,6 +8228,18 @@
    "source": [
     "## Defensive programming: being skeptical of your code"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def normalize_rectangle(rect):\n",
+    "    \"\"\"\"\"\""
+   ]
   }
  ],
  "metadata": {
