--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8245,10 +8245,18 @@
     "    ----------\n",
     "    rect : tuple of size 4\n",
     "        A tuple of size four, giving (x0, y0, x1, y1), the (x,y)\n",
-    "        positions of the lower-left and upper-right \n",
+    "        positions of the lower-left and upper-right corner\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    newrect : tuple of size 4\n",
+    "        A tuple of size four, giving the new coordinates of the corners\n",
     "    \n",
     "    \n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    x0, y0, x1, y1 = rect\n",
+    "    \n",
+    "    "
    ]
   }
  ],
