--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8256,7 +8256,12 @@
     "    \"\"\"\n",
     "    x0, y0, x1, y1 = rect\n",
     "    \n",
-    "    "
+    "    dx = x1 - x0\n",
+    "    dy = y1 - y0\n",
+    "    \n",
+    "    if dx > dy:\n",
+    "        scaled = dx/dy\n",
+    "        "
    ]
   }
  ],
