--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8256,6 +8256,9 @@
     "    \"\"\"\n",
     "    x0, y0, x1, y1 = rect\n",
     "    \n",
+    "    assert x0 < x1, 'Invalid x coordinates'\n",
+    "    assert y0 < y1, 'Invalid y coordinates'\n",
+    "    \n",
     "    dx = x1 - x0\n",
     "    dy = y1 - y0\n",
     "    \n",
@@ -8266,6 +8269,10 @@
     "    else:\n",
     "        scaled = dx/dy\n",
     "        upper_x, upper_y = scaled, 1.0\n",
+    "        \n",
+    "    assert 0 < upper_x <= 1.0, 'Calculated upper X coordinate invalid'\n",
+    "    assert 0 < upper_x <= 1.0, 'Calculated upper X coordinate invalid'\n",
+    "\n",
     "        \n",
     "    return (0, 0, upper_x, upper_y)"
    ]
