--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8231,7 +8231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
@@ -8271,15 +8271,85 @@
     "        upper_x, upper_y = scaled, 1.0\n",
     "        \n",
     "    assert 0 < upper_x <= 1.0, 'Calculated upper X coordinate invalid'\n",
-    "    assert 0 < upper_x <= 1.0, 'Calculated upper X coordinate invalid'\n",
-    "\n",
+    "    assert 0 < upper_y <= 1.0, 'Calculated upper Y coordinate invalid'\n",
     "        \n",
     "    return (0, 0, upper_x, upper_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Calculated upper Y coordinate invalid",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-140-b96c03c6aefc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnormalize_rectangle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-139-f85dba4c7123>\u001b[0m in \u001b[0;36mnormalize_rectangle\u001b[0;34m(rect)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mupper_x\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Calculated upper X coordinate invalid'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mupper_y\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Calculated upper Y coordinate invalid'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mupper_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mupper_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Calculated upper Y coordinate invalid"
+     ]
+    }
+   ],
+   "source": [
+    "normalize_rectangle((3, 2, 6, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def normalize_rectangle(rect):\n",
+    "    \"\"\"Normalizes a rectangle so that it is at the origin,\n",
+    "    and 1.0 units long on its longest axis.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    rect : tuple of size 4\n",
+    "        A tuple of size four, giving (x0, y0, x1, y1), the (x,y)\n",
+    "        positions of the lower-left and upper-right corner\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    newrect : tuple of size 4\n",
+    "        A tuple of size four, giving the new coordinates of the corners\n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    x0, y0, x1, y1 = rect\n",
+    "    \n",
+    "    assert x0 < x1, 'Invalid x coordinates'\n",
+    "    assert y0 < y1, 'Invalid y coordinates'\n",
+    "    \n",
+    "    dx = x1 - x0\n",
+    "    dy = y1 - y0\n",
+    "    \n",
+    "    if dx > dy:\n",
+    "        scaled = dy/dx\n",
+    "        upper_x, upper_y = 1.0, scaled\n",
+    "        \n",
+    "    else:\n",
+    "        scaled = dx/dy\n",
+    "        upper_x, upper_y = scaled, 1.0\n",
+    "        \n",
+    "    assert 0 < upper_x <= 1.0, 'Calculated upper X coordinate invalid'\n",
+    "    assert 0 < upper_y <= 1.0, 'Calculated upper Y coordinate invalid'\n",
+    "        \n",
+    "    return (0, 0, upper_x, upper_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -8287,10 +8357,10 @@
     {
      "data": {
       "text/plain": [
-       "(0, 0, 1.0, 1.5)"
+       "(0, 0, 1.0, 0.6666666666666666)"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
