--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -8368,6 +8368,13 @@
    "source": [
     "normalize_rectangle((3, 2, 6, 4))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look up argparse for building command line options."
+   ]
   }
  ],
  "metadata": {
